[package]
name = "lab_proto_gen"
version = "0.1.0"
authors = ["Reio Piller <reio@heathmont.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
protobuf-parser = "0.1.3"
clap = "3.0.0-beta.1"

# [profile.release]
# debug = true