[package]
name = "lab_proto_gen"
version = "0.1.0"
authors = ["Reio Piller <reio@heathmont.net>"]
edition = "2018"

[dependencies]
Inflector = "0.11.4"
prost-types = "0.6.1"
clap = "3.0.0-beta.1"
protobuf-gen = {git = "ssh://git@github.com/coingaming/protobuf-gen"}
glob = "0.3.0"
itertools = "0.8.0"

# [patch."ssh://git@github.com/coingaming/protobuf-gen"]
# protobuf-gen = { path = "../protobuf-gen" }

# [profile.release]
# debug = true
